Gerenciar Serviços, inclusão de gerenciar foto aos usuários. Rota privada de fotos de usuários
