# controllers/ClienteController.js
@@ -1,27 +1,24 @@
 import Database from "../db/database.js";
 import ClienteModel from "../models/ClienteModel.js";
 import UsuarioModel from "../models/UsuarioModel.js";
-
+import fs from 'fs';
 export default class ClienteController {
-
-    constructor() {
-    }
 
     async cadastrar(req, res) {
         try {
             const banco = Database.getInstance()
-            let { nome, telefone, email, senha, foto } = req.body;
+            let { nome, telefone, email, senha } = req.body;
 
-            let cliente = new ClienteModel(banco, 0, nome, telefone, email, senha, 'cliente', 1, foto);
-            if (cliente.validar()) {
-
+            let cliente = new ClienteModel(banco, 0, nome, telefone, email, senha, 'cliente', 1, req.file?.filename || null);
+            let { ok, msg } = cliente.validar();
+            if (ok) {
                 let result = await cliente.cadastrar();
                 cliente.usu_id = result;
 
                 return res.status(201).json({ cliente });
 
             } else {
-                return res.status(400).json({ msg: "Parâmetros incorretos. Por favor confira as informações do Cliente!" })
+                return res.status(400).json({ msg })
             }
         }
         catch (ex) {
@@ -29,7 +26,7 @@ export default class ClienteController {
             return res.status(500).json({ msg: "Erro ao processar requisição de Cadastro!" });
         }
     }
-    async atualizar(req, res) {
+    async alterar(req, res) {
         try {
             const banco = Database.getInstance()
             let { id, telefone, email, senha } = req.body;
@@ -39,24 +36,29 @@ export default class ClienteController {
             if (!cliente) {
                 return res.status(404).json({ msg: "cliente não encontrado!" })
             }
+            let fotoAntiga = cliente.usu_foto; // Armazena a foto antiga para exclusão posterior
             //altero os dados que é permitido alterar
             cliente.usu_email = email;
             cliente.usu_senha = senha;
             cliente.usu_telefone = telefone;
+            cliente.usu_foto = req.file?.filename || null;
 
-            if (cliente.validar()) {
+            let { ok, msg } = cliente.validar();
+            if (ok) {
                 let result = await cliente.cadastrar();
                 if (result) {
-                    return res.status(200).json({ msg: "cliente Atualizado!" });
+                    // Exclui a foto antiga do servidor
+                    if (fotoAntiga) {
+                        const caminhoImagemAntiga = `public/uploads/${fotoAntiga.split('/').pop()}`;
+                        fs.unlinkSync(caminhoImagemAntiga);
+                    }
+                    return res.status(200).json({ msg: "cliente Atualizado!", cliente });
                 }
-
                 throw new Error("Erro ao atualizar cliente no banco de dados");
             } else {
-                return res.status(400).json({ msg: "Parâmetros incorretos. Por favor confira as informações do usuário!" })
+                return res.status(400).json({ msg })
             }
-
-        }
-        catch (ex) {
+        } catch (ex) {
             console.error(ex);
             return res.status(500).json({ msg: "Erro ao processar requisição de Atualização!" });
         }
@@ -71,8 +73,7 @@ export default class ClienteController {
                 return res.status(404).json({ msg: "Nenhum cliente encontrado!" });
             }
             return res.status(200).json(lista)
-        }
-        catch (ex) {
+        } catch (ex) {
             console.error(ex);
             return res.status(500).json({ msg: "Erro ao processar requisição de Listar clientes!" });
         }
@@ -88,11 +89,9 @@ export default class ClienteController {
             } else {
                 return res.status(404).json({ msg: "Cliente não encontrado!" });
             }
-        }
-        catch (ex) {
+        } catch (ex) {
             console.error(ex);
             return res.status(500).json({ msg: "Erro ao processar requisição de buscar Cliente!" });
         }
     }
-    
 }
