# models/ProfissionalModel.js
@@ -22,26 +22,38 @@ export default class ProfissionalModel extends UsuarioModel {
 
     validar() {
         const regex = /^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*[^A-Za-z0-9]).{8,99}$/;
+        let msg;
+        this.prof_cpf = this.prof_cpf.replace(/\D/g, ''); // Remove caracteres não numéricos do CPF
+        this.usu_telefone = this.usu_telefone.replace(/\D/g, ''); // Remove caracteres não numéricos do telefone
+        
         if (!this.usu_nome || this.usu_nome.length < 3 || this.usu_nome.length > 100) {
-            return false;
+            msg = "Nome deve ter entre 3 e 100 caracteres";
+            return {ok: false, msg};
         } else if (!this.usu_telefone || this.usu_telefone.length != 11) {
-            return false;
+            msg = "Telefone deve ter 11 caracteres";
+            return {ok: false, msg};
         } else if (!this.usu_email || !this.usu_email.includes("@")) {
-            return false;
+            msg = "Email inválido";
+            return {ok: false, msg};
         } else if (!regex.test(this.usu_senha)) {
-            return false;
+            msg = "Senha inválida";
+            return {ok: false, msg};
         } else if (this.usu_ativo != '1' && this.usu_ativo != '0') {
-            return false;
+            msg = "Status inválido";
+            return {ok: false, msg};
         }
         else if (!this.validarcpf(this.prof_cpf)) {
-            return false;
+            msg = "CPF inválido";
+            return {ok: false, msg};
         }
 
-        return true;
+        return {ok: true, msg: "Profissional válido"};
     }
 
     static toMap(row, banco) {
-        let profissional = new ProfissionalModel(banco, row["usu_id"], row["usu_nome"], row["usu_telefone"], row["usu_email"], row["usu_senha"], row["usu_perfil"], row["usu_ativo"], row["usu_foto"], row["prof_cpf"], new Date(row["prof_admissao"]), new Date(row["prof_demissao"]))
+        const caminho = 'http://localhost:5500/profissionais/';
+        let profissional = new ProfissionalModel(banco, row["usu_id"], row["usu_nome"], row["usu_telefone"], row["usu_email"], row["usu_senha"], row["usu_perfil"], row["usu_ativo"], row["usu_foto"] ? caminho + row["usu_foto"] : caminho + 'profissionalSemFoto.png', row["prof_cpf"], row["prof_admissao"], row["prof_demissao"]);
+
         return profissional;
     }
 
