# swagger-output.json
@@ -125,30 +125,11 @@
           }
         },
         "requestBody": {
+          "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "nome": {
-                    "example": "any"
-                  },
-                  "telefone": {
-                    "example": "any"
-                  },
-                  "email": {
-                    "example": "any"
-                  },
-                  "senha": {
-                    "example": "any"
-                  },
-                  "foto": {
-                    "example": "any"
-                  },
-                  "cpf": {
-                    "example": "any"
-                  }
-                }
+                "$ref": "#/components/schemas/profissional"
               }
             }
           }
@@ -180,24 +161,11 @@
           }
         ],
         "requestBody": {
+          "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "id": {
-                    "example": "any"
-                  },
-                  "telefone": {
-                    "example": "any"
-                  },
-                  "email": {
-                    "example": "any"
-                  },
-                  "senha": {
-                    "example": "any"
-                  }
-                }
+                "$ref": "#/components/schemas/alterarProfissional"
               }
             }
           }
@@ -314,27 +282,11 @@
           }
         },
         "requestBody": {
+          "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "nome": {
-                    "example": "any"
-                  },
-                  "telefone": {
-                    "example": "any"
-                  },
-                  "email": {
-                    "example": "any"
-                  },
-                  "senha": {
-                    "example": "any"
-                  },
-                  "foto": {
-                    "example": "any"
-                  }
-                }
+                "$ref": "#/components/schemas/cliente"
               }
             }
           }
@@ -366,24 +318,11 @@
           }
         ],
         "requestBody": {
+          "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "id": {
-                    "example": "any"
-                  },
-                  "telefone": {
-                    "example": "any"
-                  },
-                  "email": {
-                    "example": "any"
-                  },
-                  "senha": {
-                    "example": "any"
-                  }
-                }
+                "$ref": "#/components/schemas/alterarCliente"
               }
             }
           }
@@ -447,6 +386,172 @@
           }
         ]
       }
+    },
+    "/servico/": {
+      "post": {
+        "tags": [
+          "Serviço"
+        ],
+        "summary": "Cadastra um Serviço.",
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/servico"
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Serviço"
+        ],
+        "summary": "Altera os dados de um Serviço.",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/alterarServico"
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Serviço"
+        ],
+        "summary": "Lista todos os Serviços.",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/servico/{id}": {
+      "get": {
+        "tags": [
+          "Serviço"
+        ],
+        "summary": "Busca um Serviço pelo ID.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "Serviço"
+        ],
+        "summary": "Exclui um Serviço pelo ID.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ]
+      }
+    },
+    "/uploads/{image}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "image",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -463,6 +568,167 @@
           "msg": {
             "type": "string",
             "example": "Mensagem de erro"
+          }
+        }
+      },
+      "servico": {
+        "type": "object",
+        "properties": {
+          "nome": {
+            "type": "string",
+            "example": "Manicure",
+            "required": true
+          },
+          "descricao": {
+            "type": "string",
+            "example": "Detalhes do serviço de manicure",
+            "required": true
+          },
+          "foto": {
+            "type": "string",
+            "format": "binary"
+          }
+        }
+      },
+      "alterarServico": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "required": true
+          },
+          "nome": {
+            "type": "string",
+            "example": "Manicure",
+            "required": true
+          },
+          "descricao": {
+            "type": "string",
+            "example": "Detalhes do serviço de manicure",
+            "required": true
+          },
+          "foto": {
+            "type": "string",
+            "format": "binary"
+          }
+        }
+      },
+      "cliente": {
+        "type": "object",
+        "properties": {
+          "nome": {
+            "type": "string",
+            "example": "Machado de Assis",
+            "required": true
+          },
+          "telefone": {
+            "type": "string",
+            "example": "(11) 12345-6789",
+            "required": true
+          },
+          "email": {
+            "type": "string",
+            "example": "machado@exemplo.com",
+            "required": true
+          },
+          "senha": {
+            "type": "string",
+            "example": "Senha123@",
+            "required": true
+          },
+          "foto": {
+            "type": "string",
+            "format": "binary"
+          }
+        }
+      },
+      "alterarCliente": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "required": true
+          },
+          "telefone": {
+            "type": "string",
+            "example": "(11) 12345-6789",
+            "required": true
+          },
+          "email": {
+            "type": "string",
+            "example": "machado@exemplo.com",
+            "required": true
+          },
+          "senha": {
+            "type": "string",
+            "example": "Senha123@",
+            "required": true
+          },
+          "foto": {
+            "type": "string",
+            "format": "binary"
+          }
+        }
+      },
+      "profissional": {
+        "type": "object",
+        "properties": {
+          "nome": {
+            "type": "string",
+            "example": "Albert Camus",
+            "required": true
+          },
+          "telefone": {
+            "type": "string",
+            "example": "(11) 98765-4321",
+            "required": true
+          },
+          "email": {
+            "type": "string",
+            "example": "albert@exemplo.com",
+            "required": true
+          },
+          "senha": {
+            "type": "string",
+            "example": "Senha123@",
+            "required": true
+          },
+          "foto": {
+            "type": "string",
+            "format": "binary"
+          },
+          "cpf": {
+            "type": "string",
+            "example": "123.456.789-00",
+            "required": true
+          }
+        }
+      },
+      "alterarProfissional": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "required": true
+          },
+          "telefone": {
+            "type": "string",
+            "example": "(11) 98765-4321",
+            "required": true
+          },
+          "email": {
+            "type": "string",
+            "example": "albert@exemplo.com",
+            "required": true
+          },
+          "senha": {
+            "type": "string",
+            "example": "Senha123@",
+            "required": true
+          },
+          "foto": {
+            "type": "string",
+            "format": "binary"
           }
         }
       }
